@@ -1,3 +1,15 @@
+2007-02-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/i386/bits/byteswap.h (__bswap_32): Add __amdfam10__
+	to the list of i486+ CPUs.
+	* sysdeps/x86_64/bits/byteswap.h (__bswap_32): Likewise.
+
+2007-02-12  Ulrich Drepper  <drepper@redhat.com>
+
+	* elf/rtld.c (RESOLVE_MAP): Always return bootstrap_map reference.
+	* elf/Makefile ($(objpfx)ld.so): Check that ld.so has no undefined
+	references.
+
 2007-02-09  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/x86_64/sysdep.h: Remove incorrect comment.
